--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^2.5.3",
+    "vaul": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
